2nd Commit before enabling designer out of process preview feature

--- a/GeneGenie.Gedcom.Sample/GeneGenie.Gedcom.Sample.csproj
+++ b/GeneGenie.Gedcom.Sample/GeneGenie.Gedcom.Sample.csproj
@@ -24,6 +24,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Data\Boyd-Family-Tree.ged">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Data\Campbell-Test.ged">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Data\presidents.ged">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
