--- a/GeneGenie.Gedcom/GeneGenie.Gedcom.csproj
+++ b/GeneGenie.Gedcom/GeneGenie.Gedcom.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
+      <TargetFramework>net7.0</TargetFramework>
+      <EnablePreviewFeatures>true</EnablePreviewFeatures>
     </PropertyGroup>
 
 	<PropertyGroup>
